edit: added additional info to project setup with javafx project